--- a/SplashPageWebApp/Views/Login/Index.cshtml
+++ b/SplashPageWebApp/Views/Login/Index.cshtml
@@ -55,7 +55,7 @@
                     },
                     "success": function(data) {
                         if (data.success == true) {
-                            //submitAction();
+                            submitAction();
                             console.log("Redirect");
                         } else {
                             console.log("Wrong code");
@@ -74,21 +74,34 @@
             var equalIndex = link.indexOf(searchString);
             var redirectUrl = "";
 
-            if (document.forms[0].action == "") {
-                //var url = window.location.href;
 
-                var args = new Object();
-                var query = location.search.substring(1);
-                var pairs = query.split("&");
-                for (var i = 0; i < pairs.length; i++) {
-                    var pos = pairs[i].indexOf('=');
-                    if (pos == -1) continue;
-                    var argname = pairs[i].substring(0, pos);
-                    var value = pairs[i].substring(pos + 1);
-                    args[argname] = unescape(value);
-                }
-                //document.forms[0].action = args.switch_url;
+            var args = new Object();
+            var query = location.search.substring(1);
+            var pairs = query.split("&");
+            for (var i = 0; i < pairs.length; i++) {
+                var pos = pairs[i].indexOf('=');
+                if (pos == -1) continue;
+                var argname = pairs[i].substring(0, pos);
+                var value = pairs[i].substring(pos + 1);
+                args[argname] = unescape(value);
             }
+            document.forms[0].action = args.switch_url;
+
+            //if (document.forms[0].action == "") {
+            //    //var url = window.location.href;
+            //    var args = new Object();
+            //    var query = location.search.substring(1);
+            //    var pairs = query.split("&");
+            //    for (var i = 0; i < pairs.length; i++) {
+            //        var pos = pairs[i].indexOf('=');
+            //        if (pos == -1) continue;
+            //        var argname = pairs[i].substring(0, pos);
+            //        var value = pairs[i].substring(pos + 1);
+            //        args[argname] = unescape(value);
+            //    }
+            //    document.forms[0].action = args.switch_url;
+            //}
+
             if (equalIndex >= 0) {
                 equalIndex += searchString.length;
                 redirectUrl = "";
