--- a/SplashPageWebApp/FISProject/css/style.css
+++ b/SplashPageWebApp/FISProject/css/style.css
@@ -43,6 +43,11 @@ body {
 .header-w3l {
     padding-top: 2em;
 }
+
+.error {
+    color: #ea2858;
+}
+
 .header-w3l h1 {
     font-size: 3em;
     color: white;
